
* Issue 39: Added per-test-case metadata values to the HTML reports.

* Issue 37: Simplified the syntax() calls in configuration and Kyuafile
  files to only specify the requested version instead of also the format
  name.  The format name is implied by the file being loaded, so there
  is no use in the caller having to specify it.  The version number of these
  files has been bumped to 2.

* Reduced automatic screen line wrapping of messages to the help command
  and the output of tables by db-exec.  Wrapping any other messages
  (specially anything going to stderr) was very annoying because it
  prevented natural copy/pasting of text.

* Increased the granularity of the error codes returned by kyua(1) to
  denote different error conditions.  This avoids the overload of '1'
  to indicate both "expected" errors from specific subcommands from
  unexpected errors caused by the internals of the code.  The manual
  now correctly explain how the exit codes behave on a command basis.

* Issue 47: Started using the independent testers in the kyua-testers
  package to run the test cases.  Kyua does not implement the logic to
  invoke test cases any more, which provides for better modularity,
  extensibility and robustness.

* Optimized the database schema to make report generation almost
  instantaneous.

* Bumped the database schema to 2.  The database now records the
  metadata of both test programs and test cases generically, without
  knowledge of their interface.

* Added the 'db-migrate' command to provide a mechanism to upgrade a
  database with an old schema to the current schema.

* Removed the GDB build-time configuration variable.  This is now part
  of the kyua-testers package.

* Rewrote the Kyuafile parsing code in C++, which results in a much
  simpler implementation.  As a side-effect, this gets rid of the
  external Lua files required by 'kyua', which in turn make the tool
  self-contained.


Changes in version 0.5
======================
